--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -400,6 +400,48 @@ header h1::after {
     margin-bottom: 10px;
 }
 
+.quantity-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+    gap: 10px;
+}
+
+.quantity-btn {
+    background-color: #b62e31;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    line-height: 1;
+}
+
+.quantity-btn:hover {
+    background-color: #f5db3c;
+    color: black;
+}
+
+.quantity-container input.quantity-number {
+    padding: 5px;
+    border: 1px solid #b62e31;
+    border-radius: 5px;
+    font-size: 18px;
+    width: 65px;
+    box-sizing: content-box;
+    text-align: center;
+    margin: 0;
+    background-color: #f8f8f8;
+    color: #000;
+}
+
 .add-to-cart {
     padding: 6px 10px;
     background-color: #b62e31;
