--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -42,7 +42,7 @@ ul {
     color: #b62e31;
 }
 
-.home {
+.active {
     border-bottom: 3px solid #b62e31;
 }
 
@@ -53,7 +53,7 @@ ul {
 
 .btn {
     display: inline-block;
-    padding: 10px 20px;
+    padding: 9px 20px;
     font-size: 16px;
     text-align: center;
     text-decoration: none;
@@ -442,17 +442,128 @@ header h1::after {
     color: #000;
 }
 
-.add-to-cart {
-    padding: 6px 10px;
+/* Cart Page Styles */
+.cart-item {
+    display: flex;
+    align-items: flex-start;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 20px;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 680px;
+}
+
+.image-container {
+    flex: 0 0 215px;
+    height: 215px;
+    margin-right: 20px;
+}
+
+.image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.details {
+    flex: 1;
+}
+
+.restaurant-info {
+    margin-bottom: 10px;
+}
+
+.restaurant-name {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.location {
+    font-size: 14px;
+    color: #666;
+}
+
+.divider {
+    border: 0;
+    border-top: 1px solid #b62e31;
+    margin: 10px 0;
+    width: 100%;
+}
+
+.menu-info {
+    display: flex;
+    align-items: baseline;
+    gap: 190px;
+}
+
+.menu-name {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 14px;
+}
+
+.price {
+    font-size: 16px;
+    color: #b62e31;
+}
+
+.quantity-container {
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+}
+
+.quantity-btn {
     background-color: #b62e31;
     color: #fff;
     border: none;
-    border-radius: 12px;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
-.add-to-cart:hover {
+.quantity-btn:hover {
     background-color: #f5db3c;
     color: black;
+}
+
+.quantity-number {
+    width: 50px;
+    text-align: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin: 0 10px;
+}
+
+.sub-total {
+    display: flex;
+    align-items: baseline;
+    gap: 40px;
+}
+
+.sub-total label {
+    margin-right: 10px;
+    font-weight: bold;
+}
+
+.sub-total input {
+    width: 75px;
+    text-align: center;
+    border: 1px solid #b62e31;
+    border-radius: 5px;
+}
+
+.proceed-to-checkout {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px; 
 }
